<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="media_toolbar">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="settings_toolbar">Настройки</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="theme">Темная тема</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="mail_recipient">wyacheslavlitvinov@yandex.ru</string>
    <string name="theme_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_terms">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search">Поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="network_problems">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="historyInformText">Вы искали</string>
    <string name="songNamePlaceholder">Неизвестный трек</string>
    <string name="artistNamePlaceholder">Неизвестный артист</string>
    <string name="songTimePlaceholder">00:00</string>
    <string name="songDurationInfo">Длительность</string>
    <string name="songAlbumInfo">Альбом</string>
    <string name="songAlbumValuePlaceholder">Неизвестный альбом</string>
    <string name="songYearInfo">Год</string>
    <string name="songYearValuePlaceholder">Неизвестный год</string>
    <string name="songGenreInfo">Жанр</string>
    <string name="songGenreValuePlaceholder">Неизвестный жанр</string>
    <string name="songCountryInfo">Страна</string>
    <string name="songCountryValuePlaceholder">Неизвестная страна</string>
    <string name="createPlaylistPlaceholder">Плейлист создан</string>
    <string name="favorites_tracks_media">Избранные треки</string>
    <string name="playlists_media">Плейлисты</string>
    <string name="empty_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="namePlaylist">Название*</string>
    <string name="contextPlaylist">Описание</string>
    <string name="addPlaylist">Добавить в плейлист</string>
    <string name="unknown_playlist">Неизвестный плейлист</string>
    <string name="empty_songs">0 треков</string>
    <string name="new_playlist_alert_tittle">Завершить создание плейлиста?</string>
    <string name="new_playlist_alert_message">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_alert_negative_button">Отмена</string>
    <string name="new_playlist_alert_positive_button">Завершить</string>
</resources>