<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/indent_toolbar_settings"
        android:orientation="horizontal"
        android:padding="@dimen/toolbar_padding_indent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/ToolbarText"
                android:layout_marginStart="@dimen/indent_text_toolbar"
                android:text="@string/settings_toolbar" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_settings_menu">

            <TextView
                style="@style/SettingsViewButtonText"
                android:text="@string/theme" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/CustomSwitch"
                android:id="@+id/themeSwitcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/indent_switch_settings"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/shareButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/SettingsViewButtonText"
                android:text="@string/share" />

            <ImageView
                style="@style/IconColor"
                android:layout_width="@dimen/icon_back_size"
                android:layout_height="@dimen/icon_back_size"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="@dimen/size_icons_settings"
                android:gravity="center"
                android:src="@drawable/baseline_share_24" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/helpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/SettingsViewButtonText"
                android:text="@string/support" />

            <ImageView
                style="@style/IconColor"
                android:layout_width="@dimen/icon_back_size"
                android:layout_height="@dimen/icon_back_size"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="@dimen/size_icons_settings"
                android:gravity="center"
                android:src="@drawable/baseline_support_agent_24" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/termsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/SettingsViewButtonText"
                android:text="@string/terms" />

            <ImageView
                style="@style/IconColor"
                android:layout_width="@dimen/icon_back_size"
                android:layout_height="@dimen/icon_back_size"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="@dimen/size_icons_settings"
                android:gravity="center"
                android:src="@drawable/baseline_arrow_forward_ios_24" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>