<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".player.ui.activity.PlayerActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/height_toolbar_guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/indent_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/indent_16" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/infoBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_tags="durationTag, countryTag" />

            <ImageView
                android:id="@+id/songImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:src="@drawable/album_placeholder_player"
                app:layout_constraintBottom_toTopOf="@id/songName"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/topBorder" />

            <TextView
                android:id="@+id/songName"
                style="@style/SongsMainInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_8"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/indent_16"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/songNamePlaceholder"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/songImage" />

            <TextView
                android:id="@+id/songArtist"
                style="@style/SongsMainInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_8"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/artistNamePlaceholder"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/songName" />

            <ImageView
                android:id="@+id/queueButton"
                style="@style/PlayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/queue_button"
                app:layout_constraintBottom_toBottomOf="@id/playButton"
                app:layout_constraintEnd_toStartOf="@id/playButton"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/playButton" />

            <ImageView
                android:id="@+id/playButton"
                style="@style/PlayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/play_button"
                app:layout_constraintBottom_toBottomOf="@id/queueButton"
                app:layout_constraintEnd_toStartOf="@id/favoriteBorder"
                app:layout_constraintStart_toEndOf="@id/queueButton"
                app:layout_constraintTop_toBottomOf="@id/songArtist" />

            <ImageView
                android:id="@+id/favoriteBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/favorite_border"
                style="@style/FavoriteButton"
                app:layout_constraintBottom_toBottomOf="@id/playButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/playButton"
                app:layout_constraintTop_toTopOf="@id/playButton" />

            <TextView
                android:id="@+id/timeView"
                style="@style/SongsMainInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/songTimePlaceholder"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/playButton"
                app:layout_constraintStart_toStartOf="@id/playButton"
                app:layout_constraintTop_toBottomOf="@id/playButton" />

            <TextView
                android:id="@+id/durationInfo"
                style="@style/SongsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/songDurationInfo"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTag="durationTag"
                app:layout_constraintTop_toBottomOf="@id/timeView" />

            <TextView
                android:id="@+id/durationInfoValue"
                style="@style/SongsInfoValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_16"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/songTimePlaceholder"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/infoBarrier"
                app:layout_constraintTop_toTopOf="@id/durationInfo" />

            <TextView
                android:id="@+id/albumInfo"
                style="@style/SongsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_16"
                android:text="@string/songAlbumInfo"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/durationInfo" />

            <TextView
                android:id="@+id/albumInfoValue"
                style="@style/SongsInfoValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_16"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/songAlbumValuePlaceholder"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/infoBarrier"
                app:layout_constraintTop_toTopOf="@id/albumInfo" />

            <TextView
                android:id="@+id/yearInfo"
                style="@style/SongsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_16"
                android:text="@string/songYearInfo"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/albumInfo" />

            <TextView
                android:id="@+id/yearInfoValue"
                style="@style/SongsInfoValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_16"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/songYearValuePlaceholder"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/infoBarrier"
                app:layout_constraintTop_toTopOf="@id/yearInfo" />

            <TextView
                android:id="@+id/genreInfo"
                style="@style/SongsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_16"
                android:text="@string/songGenreInfo"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/yearInfo" />

            <TextView
                android:id="@+id/genreInfoValue"
                style="@style/SongsInfoValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_16"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/songGenreValuePlaceholder"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/infoBarrier"
                app:layout_constraintTop_toTopOf="@id/genreInfo" />

            <TextView
                android:id="@+id/countryInfo"
                style="@style/SongsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_16"
                android:text="@string/songCountryInfo"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTag="countryTag"
                app:layout_constraintTop_toBottomOf="@id/genreInfo" />

            <TextView
                android:id="@+id/countryInfoValue"
                style="@style/SongsInfoValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_16"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/songCountryValuePlaceholder"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/infoBarrier"
                app:layout_constraintTop_toTopOf="@id/countryInfo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/backButton"
        style="@style/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_16"
        android:layout_marginTop="@dimen/indent_16"
        android:layout_marginBottom="@dimen/indent_16"
        android:background="@color/transparent"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/CreatePlaylistButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/indent_8"
        android:layout_marginEnd="@dimen/indent_8"
        android:layout_marginBottom="@dimen/indent_16"
        android:gravity="center"
        android:text="@string/createPlaylistPlaceholder"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>