<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/indent_toolbar_settings"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/toolbar_settings_indent">


            <LinearLayout
                android:id="@+id/button_back_settings"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_24" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_toolbar"
                android:textSize="@dimen/main_title"
                android:textColor="@color/black100"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/indent_text_toolbar_settings">
            </TextView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_settings_menu">

            <TextView
                android:layout_marginTop="@dimen/primary_text_size_settings"
                android:layout_marginBottom="@dimen/primary_text_size_settings"
                android:layout_margin="@dimen/indent_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textColor="@color/black"
                android:textSize="@dimen/indent_16"
                tools:ignore="SpUsage">

            </TextView>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/indent_switch_settings">
            </androidx.appcompat.widget.SwitchCompat>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="@dimen/primary_text_size_settings"
                android:layout_marginBottom="@dimen/primary_text_size_settings"
                android:layout_margin="@dimen/indent_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/indent_16"
                tools:ignore="SpUsage">

            </TextView>

            <ImageView
                android:layout_width="@dimen/icon_back_size"
                android:layout_height="@dimen/icon_back_size"
                android:layout_gravity="end|center_vertical"
                android:gravity="center"
                android:src="@drawable/baseline_share_24"
                android:layout_marginRight="@dimen/size_icons_settings">

            </ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="@dimen/primary_text_size_settings"
                android:layout_marginBottom="@dimen/primary_text_size_settings"
                android:layout_margin="@dimen/indent_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textColor="@color/black"
                android:textSize="@dimen/indent_16"
                tools:ignore="SpUsage">

            </TextView>

            <ImageView
                android:layout_width="@dimen/icon_back_size"
                android:layout_height="@dimen/icon_back_size"
                android:layout_gravity="end|center_vertical"
                android:gravity="center"
                android:src="@drawable/baseline_support_agent_24"
                android:layout_marginRight="@dimen/size_icons_settings">

            </ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="@dimen/primary_text_size_settings"
                android:layout_marginBottom="@dimen/primary_text_size_settings"
                android:layout_margin="@dimen/indent_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="@color/black"
                android:textSize="@dimen/indent_16"
                tools:ignore="SpUsage">

            </TextView>

            <ImageView
                android:layout_width="@dimen/icon_back_size"
                android:layout_height="@dimen/icon_back_size"
                android:layout_gravity="end|center_vertical"
                android:gravity="center"
                android:src="@drawable/baseline_arrow_forward_ios_24"
                android:layout_marginRight="@dimen/size_icons_settings">

            </ImageView>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>